# webgpu-test

./: README.md
examples/babylon-lite/complex/: dust-npe.js  index.html  index.js
examples/babylon-lite/cube/: index.html  index.js
examples/babylon-lite/primitive/: index.html  index.js
examples/babylon-lite/square/: index.html  index.js
examples/babylon-lite/teapot/: index.html  index.js
examples/babylon-lite/texture/: index.html  index.js
examples/babylon-lite/triangles/: index.html  index.js
examples/babylonjs-lite/complex/: index.html  index.js
examples/babylonjs-lite/cube/: index.html  index.js
examples/babylonjs-lite/primitive/: index.html  index.js
examples/babylonjs-lite/square/: index.html  index.js
examples/babylonjs-lite/teapot/: index.html  index.js
examples/babylonjs-lite/texture/: index.html  index.js
examples/babylonjs-lite/triangles/: index.html  index.js
examples/babylonjs/complex/: index.html  index.js  style.css
examples/babylonjs/cube/: index.html  index.js
examples/babylonjs/primitive/: index.html  index.js
examples/rust/complex/: Cargo.toml  build.bat  complex.js  complex_bg.wasm  index.html  readme.md
examples/rust/complex/src/: lib.rs  loader.rs  shader.wgsl  skybox.wgsl
examples/rust/square/: Cargo.toml  build.bat  index.html  readme.md  square.d.ts  square.js  square_bg.wasm  square_bg.wasm.d.ts
examples/rust/square/src/: README.md  lib.rs  main.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shader.wgsl
examples/rust/triangle/: Cargo.toml  build.bat  index.html  readme.md  style.css  triangle.d.ts  triangle.js  triangle_bg.wasm  triangle_bg.wasm.d.ts
examples/rust/triangle/src/: README.md  lib.rs  main.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shader.wgsl
libs/: glslang.js
(+246 files in other folders)
