[package]
name = "complex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wgpu = "29"
glam = "0.30"
bytemuck = { version = "1", features = ["derive"] }
gltf = { version = "1.4", default-features = false, features = ["utils", "names"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
log = "0.4"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Response",
] }
