[package]
name = "square"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.1"
wgpu = "0.14.2"
bytemuck = { version = "1.4", features = ["derive"] }
console_error_panic_hook = "0.1.7"
console_log = "0.2"
web-sys = { version = "0.3.60", features = ["Location"] }
wasm-bindgen-futures = "0.4.33"
